fix: improve button text readability

--- a/style.css
+++ b/style.css
@@ -66,22 +66,22 @@ body {
 
 .keyboard .row:first-of-type button {
     background-color: #b2c595;
-    color: #cbd1cb;
+    color: #7b8a85;
 }
 
 .keyboard .row:nth-of-type(2) button {
     background-color: #85a672;
-    color: #acbab7;
+    color: #a6b5aa;
 }
 
 .keyboard .row:nth-of-type(3) button {
     background-color: #536a4c;
-    color: #65776a;
+    color: #abbbb5;
 }
 
 .keyboard .row:nth-of-type(4) button {
     background-color: #2c3a2a;
-    color: #afbebb;
+    color: #9baca7;
 }
 
 .keyboard #clear-button {
